# gpt2giga

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG_en.md  COOL_UI.md  Dockerfile  Makefile  README.md  UI_PROGRESS.md  docker-compose-observability.yaml  docker-compose-observe-multiple.yaml  docker-compose.traefik.yaml  docker-compose.yaml  gigachat-0.2.2a1-py3-none-any.whl  gigachat-0.2.3a1-py3-none-any.whl  gpt2giga.py  mkdocs.yml  opencode.json  package-lock.json  package.json  pyproject.toml  pytest.ini  tsconfig.json
.github/: AGENTS.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.ru.md
.github/PULL_REQUEST_TEMPLATE/: ru.md
.github/codeql/: codeql-config.yml
.github/workflows/: actionlint.yaml  ci.yaml  codeflash.yaml  codeql.yaml  dependency-review.yaml  docker-smoke.yaml  docker_image.yaml  docs-pages.yaml  nightly-smoke.yaml  pip-audit.yaml  pr-labeler.yaml  publish-ghcr.yml  publish-pypi.yml  release-drafter.yaml  stale-issues.yaml
compose/: multiple.yaml  nginx.yaml  observability.yaml  observe-multiple.yaml  opensearch.yaml  phoenix.yaml  postgres.yaml  traefik.yaml
deploy/: README.md  base.yaml  mitmproxy.yaml  opensearch.yaml  phoenix.yaml  postgres.yaml
deploy/compose/: base.yaml  multiple.yaml  nginx.yaml  observability-langfuse.yaml  observability-otlp.yaml  observability-phoenix.yaml  observability-prometheus.yaml  observability.yaml  observe-multiple.yaml  traefik.yaml
deploy/postgres-init/: 001_apply_traffic_log_migration.sh
deploy/traefik/: traefik.yml
docs/: PLANS.md  README.md  admin-frontend-copy-refactor-2026-04-17.md  admin-frontend-copy-refactor-progress-2026-04-17.md  admin-frontend-review-2026-04-17-worklog.md  admin-frontend-review-2026-04-17.md  admin-frontend-review-2026-04-20-progress.md  admin-ui-litellm-reference-progress-2026-04-20.md  api-compatibility.md  architecture.md  builtin-tools.md  client-parameter-compatibility.md  codex-gpt-5.4-frontend-refactor-2026-04-16.md  codex-gpt-5.4-frontend-refactor-progress-2026-04-16.md  codex-gpt-5.4-plan-2026-04-15.md  codex-gpt-5.4-progress.md  compatibility-facades.md  compatibility.md  configuration.md  contributing.md  deployment.md  design-notes.md  diagnostics.md  files-batches-backend-normalization-plan-2026-04-21.md  fusion-guide.md  fusion.md  gpt2giga_codex_task_breakdown_gpt54_high_2026-04-22.md  gpt2giga_task_progress.md  gpt2giga_task_slices.md  how-to-add-provider.md  index.md  integrations.md  live-integration-tests.md  operations.md  operator-guide.md  quickstart.md  refactor-tasks-2026-04-14.md  refactor-worklog.md  release-checklist.md  repo-overview-2026-04-14.md  (+1 more)
docs-site/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/architecture/: fusion-provider.md  how-to-add-provider.md  logging-and-observability.md  normalized-messages.md
docs/integrations/: AGENTS.md  README.md
docs/internal/: README.md  gpt2giga_codex_task_breakdown_gpt54_high_2026-04-22.md
examples/: AGENTS.md  README.md  batches.py  embeddings.py  files.py  image_base_64_chat_completion.py  image_url_chat_completion.py  models.py  openai_agents.py  structured_output.py
examples/agents/: README.md
examples/anthropic/: README.md  base64_image.py  function_calling.py  image_url.py  message_batches.jsonl  message_batches.py  messages.py  multi_turn.py  structured_output_stream.py
examples/batch_validation/: README.md  anthropic_validate.py  gemini_validate.py  openai_validate.py
examples/chat_completions/: base64_image.py  chat_completion.py  documents.py  function_calling.py  image_url.py  structured_output_nested.py
examples/gemini/: README.md  __init__.py  common.py  count_tokens.py  embeddings.py  function_calling.py
examples/openai/: batches.py  embeddings.py  files.py
examples/responses/: README.md  base64_image.py  function_calling.py  image_url.py  single_prompt.py  structured_output.py  structured_output_nested.py  with_instructions.py
examples/translate/: README.md  (+9 more)
gpt2giga/: AGENTS.md  __init__.py  __main__.py  api_server.py  app_state.py  auth.py  cli.py  config.py  constants.py  gpt2giga_models.json  logger.py  middleware.py  openapi_docs.py  openapi_tags.py  protocol.py  router.py  utils.py
integrations/: AGENTS.md
package/: gigachat-0.2.0-py3-none-any.whl
scripts/: AGENTS.md  check_admin_assets_sync.mjs  generate_badge.py  run_examples_smoke.py  run_fusion_smoke.py  sse_event.py
tests/: AGENTS.md  conftest.py  test_api_server.py  test_auth.py  test_cli.py  test_config.py  test_deploy_profiles.py  test_embeddings_encoding_format.py  test_embeddings_variants.py  test_lar1_router.py  test_logger.py  test_middleware.py  test_openapi_specs.py  test_protocol.py  test_protocol_attachments.py  test_protocol_transform_params.py  test_router.py  test_router_endpoints.py  test_utils.py
traefik/: dashboard.yml  lite.yml  max.yml  pro.yml  rules.yml
(+892 files in other folders)
