[tool.poetry]
name = "gpt2giga"
version = "0.0.14"
description = ""
authors = ["Konstantin Krestnikov <rai220@gmail.com>"]
license = "MIT"
readme = "README.md"
include = [{ path = "data/gpt2giga_models.json", format = ["sdist", "wheel"] }]

[tool.poetry.dependencies]
python = "^3.9"
asyncio = "^3.4.3"
python-dotenv = "^1.0.1"
aiohttp = "^3.10.10"
tiktoken = "^0.9.0"
pillow = "^11.1.0"
uvicorn = "^0.37.0"
fastapi = "^0.119.0"
openai = "^2.3.0"
aioitertools = "^0.12.0"
gigachat = "^0.1.42.post2"

[tool.poetry.scripts]
gpt2giga = "gpt2giga:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "ruff (>=0.14.2,<0.15.0)"
]
