[project]
name = "gpt2giga"
version = "0.2.0a1"
description = "Утилита для проксирования OpenAI, Anthropic и Gemini запросов в GigaChat"
authors = [{ name = "Konstantin Krestnikov", email = "rai220@gmail.com" }]
requires-python = ">=3.10,<4,<3.15"
readme = "README.md"
license = "MIT"
dependencies = [
    "python-dotenv>=1.0.1,<2",
    "aiohttp>=3.10.10,<4",
    "tiktoken>=0.12.0,<0.13",
    "pillow>=12.1.1,<13",
    "uvicorn>=0.41.0,<1",
    "openai>=2.3.0,<3",
    "aioitertools>=0.13.0,<0.14",
    "loguru>=0.7.3,<0.8",
    "sse-starlette>=3.0.3,<4",
    "pydantic-settings>=2.12.0,<3",
    "fastapi>=0.135.3,<1",
    "starlette>=1.0.0,<2",
    "anthropic>=0.79.0",
    "gigachat",
    "google-genai>=1.70.0",
]

[project.scripts]
gpt2giga = "gpt2giga:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.coverage.run]
omit = [
  "tests/*",
  "scripts/*",
  "docs/*",
  "*/migrations/*",
  "examples/*",
  "*/__pycache__/*",
  ".local/"
]
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
[tool.codeflash]
# All paths are relative to this pyproject.toml's directory.
module-root = "gpt2giga"
tests-root = "tests"
test-framework = "pytest"
ignore-paths = []
disable-telemetry = true
formatter-cmds = ["black $file"]

[tool.uv.sources]
gigachat = { path = "gigachat-0.2.2a1-py3-none-any.whl" }
[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "pytest (>=9.0.2, <10.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "ruff (>=0.15,<1)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
]
integrations = [
    "openai-agents (>=0.12.0,<1)",
    "cryptography (>=46.0.5)",
    "pyjwt (>=2.12.0)"

]
